--- a/public/css/style_register.css
+++ b/public/css/style_register.css
@@ -10,7 +10,7 @@ body {
     background-color: #f9f9f9;
 }
 
-/* Enhanced Styles */
+/* Container */
 .signin-container {
     background-color: #ffffff;
     border-radius: 10px;
